[gd_scene load_steps=3 format=3 uid="uid://dmv5omn07gsx3"]

[ext_resource type="Script" path="res://scripts/KingdomHub.gd" id="1"]
[ext_resource type="Theme" path="res://themes/KeyboardDefenseTheme.tres" id="2"]

[node name="KingdomHub" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2")
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.04, 0.035, 0.06, 1)

[node name="TopBar" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 48)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 16.0
offset_top = 12.0
offset_right = -16.0
offset_bottom = 60.0
grow_horizontal = 2

[node name="TitleLabel" type="Label" parent="TopBar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 22
theme_override_colors/font_color = Color(0.98, 0.84, 0.44, 1)
text = "Kingdom Management"

[node name="GoldLabel" type="Label" parent="TopBar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
theme_override_colors/font_color = Color(0.98, 0.84, 0.44, 1)
text = "Gold: 0"
horizontal_alignment = 2

[node name="BackButton" type="Button" parent="TopBar"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "Map"

[node name="ContentPanel" type="PanelContainer" parent="."]
layout_mode = 1
anchor_left = 0.02
anchor_top = 0.1
anchor_right = 0.98
anchor_bottom = 0.96
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0

[node name="Scroll" type="ScrollContainer" parent="ContentPanel"]
layout_mode = 2

[node name="Content" type="VBoxContainer" parent="ContentPanel/Scroll"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 16

[node name="ModifiersLabel" type="Label" parent="ContentPanel/Scroll/Content"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(0.65, 0.7, 0.82, 1)
text = "Training bonuses: None yet. Upgrade to boost your typing impact."
autowrap_mode = 3

[node name="KingdomHeader" type="Label" parent="ContentPanel/Scroll/Content"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(0.98, 0.84, 0.44, 1)
text = "Kingdom Upgrades"

[node name="KingdomList" type="VBoxContainer" parent="ContentPanel/Scroll/Content"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="UnitHeader" type="Label" parent="ContentPanel/Scroll/Content"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(0.98, 0.84, 0.44, 1)
text = "Unit Upgrades"

[node name="UnitList" type="VBoxContainer" parent="ContentPanel/Scroll/Content"]
layout_mode = 2
theme_override_constants/separation = 8
